--- a/src/main/resources/fooddelivery.properties
+++ b/src/main/resources/fooddelivery.properties
@@ -27,7 +27,7 @@ imprimir=Imprimir
 consultar=Consultar
 actualiza=Actualizar
 ver=Ver
-estado=Estado
+status=Estado
 auto=Auto
 ajuste=Ajuste{0, choice, 0#|1#s}
 config=Configuraci\u00F3n
@@ -155,16 +155,15 @@ caja=Caja
 documento=Documento{0, choice, 0#|1#s}
 clasificador=Clasificador
 definicion=Definición
+category=Categoría
+product=Producto
 
-#tipo folio
-ORIGINAL=Original
-COPIA=Copia
-AMBOS=Ambos
-
-GIRADO=Girado
-FOLIADO=Foliado
-CUSTODIADO=Custodiado
-ARCHIVADO=Archivado;
+#estado pago
+PROCESSED=PROCESADO
+PENDING=PENDIENTE
+CANCELLED=CANCELADO
+FAILED=FALLADO
+CHARGEBACK=DEVOLUCIÓN
 
 infNroDocCheque=Ingrese el número o deje en blanco.
 errNroDocChequeExist=El número de Cheque está registrado.
@@ -172,7 +171,7 @@ errNroDocChequeMin=El número de Cheque no tiene la cantidad de dígitos requerido
 errEmptyTipoCuenta=Tipo Cuenta configurado para ingresos no existe.
 errEliminar=Ocurrio un error al intentar eliminar.
 errGuardar=Ocurrio un error al intentar guardar.
-errCambiarEstado=Ocurrio un error al intentar cambiar de estado.
+errCambiarEstado=Ocurrio un error al intentar cambiar de status.
 errMontoDscto=El Monto de Descuento es superior al Importe Global asignado.
 errImportDetalle=Importe es superior al Importe Global asignado.
 errImportTotal=Necesita especificar el monto del Importe.
@@ -180,8 +179,34 @@ errImportTotalZero=El Importe tiene que ser mayor a cero.
 errPeriodoActual=El periodo no se encuantra configurado.
 errSistema=El ocurrió un error interno en el Sistema. Puede continuar usando el sistema normalmente!
 errIntegridadDb=El sistema detecto el ingreso de datos existentes en la base de datos!
-errCartOrdePagos=Debe ingresar al menos un Comprobante de Pago.
+errOrderDetail=Debe ingresar al menos agregar un producto.
 warnAgrePago=La cantidad máxima de pagos a {0} por Carta Orden es 1.
+
+current_price=Precio actual
+branch=Restaurant
+address=Direcci{0, choice, 0#ón|1#ones}
+managerName=Nombre de Administrador
+openHour=Hora Apertura
+closeHour=Hora Cierre
+customer=Cliente
+email=Correo
+username=Usuario
+surname=Apellidos
+birthdate=Fecha Nac.
+mobilePhone=Nro Celular
+password=Contraseña
+gender=Sexo
+addAddress=Agregar dirección
+country=Pais
+city=Ciudad
+district=Distrito
+order=Órden
+paymentStatus=Estado Pago
+paymentType=Tipo Pago
+promoCode=Código Promoción
+quantity=Cantidad
+price=Precio
+
 
 
 
