Agregar notification del servidor al cliente celular por firebase

--- a/src/main/resources-dev/database.properties
+++ b/src/main/resources-dev/database.properties
@@ -23,3 +23,5 @@ tomcat.max_idle=30000
 tomcat.max_active=100
 tomcat.defaultAutoCommit=false
 tomcat.validationQuery=SELECT 1
+
+my.fcm.key=KEYFIREBASESERVER
